--- a/force-app/main/default/aura/MostProfitableTransactions/MostProfitableTransactions.cmp
+++ b/force-app/main/default/aura/MostProfitableTransactions/MostProfitableTransactions.cmp
@@ -1,9 +1,19 @@
-<aura:component controller="MostProfitableTransactionsController" implements="flexipage:availableForAllPageTypes">
+<aura:component controller="MostProfitableTransactionsController" implements="flexipage:availableForAllPageTypes" access="global">
     <aura:attribute name="transactions" type="Transaction__c[]"/>
     <aura:attribute name="limitNumber" type="Integer" default="5"/>
     <aura:attribute name="columns" type="List"/>
     
     <aura:handler name="init" value="{!this}" action="{!c.doInit}"/>
     <aura:handler name="change" value="{!v.limitNumber}" action="{!c.reloadTransactions}"/>
+
+    <div class="slds-box slds-theme_default">
+        <lightning:layoutItem padding="around-small" size="9">
+            <lightning:datatable keyField="Id" data="{!v.transactions}" columns="{!v.columns}" hideCheckboxColumn="true" />
+        </lightning:layoutItem>
+
+        <lightning:layoutItem padding="around-small" size="3">
+            <ui:inputNumber label="Number of transactions" value="{!v.limitNumber}" updateOn="keydown" />
+        </lightning:layoutItem>
+    </div>
 	
 </aura:component>
